crates/flight-simconnect/tests/snapshots/simconnect_snapshots__simvar_registry_all_names.snap
---
source: crates/flight-simconnect/tests/simconnect_snapshots.rs
expression: names
---
[
    "ACCELERATION BODY X",
    "ACCELERATION BODY Z",
    "AILERON POSITION",
    "AILERON TRIM PCT",
    "AIRSPEED INDICATED",
    "AIRSPEED MACH",
    "AIRSPEED TRUE",
    "AMBIENT DENSITY",
    "AMBIENT PRESSURE",
    "AMBIENT TEMPERATURE",
    "AMBIENT WIND DIRECTION",
    "AMBIENT WIND VELOCITY",
    "ANGLE OF ATTACK INDICATOR",
    "ATTITUDE INDICATOR BANK DEGREES",
    "ATTITUDE INDICATOR PITCH DEGREES",
    "AUTOPILOT AIRSPEED HOLD VAR",
    "AUTOPILOT ALTITUDE LOCK",
    "AUTOPILOT ALTITUDE LOCK VAR",
    "AUTOPILOT APPROACH HOLD",
    "AUTOPILOT FLIGHT DIRECTOR ACTIVE",
    "AUTOPILOT FLIGHT LEVEL CHANGE",
    "AUTOPILOT HEADING LOCK",
    "AUTOPILOT HEADING LOCK DIR",
    "AUTOPILOT MACH HOLD VAR",
    "AUTOPILOT MASTER",
    "AUTOPILOT NAV1 LOCK",
    "AUTOPILOT VERTICAL HOLD VAR",
    "AUTOPILOT YAW DAMPER",
    "BAROMETER PRESSURE",
    "BRAKE LEFT POSITION",
    "BRAKE PARKING POSITION",
    "BRAKE RIGHT POSITION",
    "COM ACTIVE FREQUENCY:1",
    "COM ACTIVE FREQUENCY:2",
    "COM STANDBY FREQUENCY:1",
    "COM STANDBY FREQUENCY:2",
    "ELECTRICAL AVIONICS BUS VOLTAGE",
    "ELECTRICAL MASTER BATTERY",
    "ELEVATOR POSITION",
    "ELEVATOR TRIM POSITION",
    "ENG EXHAUST GAS TEMPERATURE:1",
    "ENG FUEL FLOW GPH:1",
    "ENG FUEL FLOW GPH:2",
    "ENG FUEL VALVE OPEN:1",
    "ENG ITT:1",
    "ENG N1 RPM:1",
    "ENG N1 RPM:2",
    "ENG N2 RPM:1",
    "ENG N2 RPM:2",
    "ENG OIL PRESSURE:1",
    "ENG OIL TEMPERATURE:1",
    "ENG TORQUE PERCENT:1",
    "FLAPS HANDLE INDEX",
    "FLAPS HANDLE PERCENT",
    "FUEL LEFT QUANTITY",
    "FUEL RIGHT QUANTITY",
    "FUEL TANK CENTER QUANTITY",
    "FUEL TOTAL QUANTITY",
    "FUEL TOTAL QUANTITY WEIGHT",
    "G FORCE",
    "GEAR HANDLE POSITION",
    "GEAR POSITION:0",
    "GEAR POSITION:1",
    "GEAR POSITION:2",
    "GENERAL ENG ANTI ICE POSITION:1",
    "GENERAL ENG GENERATOR SWITCH:1",
    "GENERAL ENG MIXTURE LEVER POSITION:1",
    "GENERAL ENG MIXTURE LEVER POSITION:2",
    "GENERAL ENG RPM:1",
    "GENERAL ENG RPM:2",
    "GENERAL ENG THROTTLE LEVER POSITION:1",
    "GENERAL ENG THROTTLE LEVER POSITION:2",
    "GPS GROUND SPEED",
    "GROUND ALTITUDE",
    "HEADING INDICATOR",
    "HSI CDI NEEDLE",
    "HSI GSI NEEDLE",
    "INCIDENCE BETA",
    "INDICATED ALTITUDE",
    "KOHLSMAN SETTING MB",
    "LIGHT BEACON",
    "LIGHT LANDING",
    "LIGHT NAV",
    "LIGHT STROBE",
    "LIGHT TAXI",
    "MAGNETIC COMPASS",
    "MAX GROSS WEIGHT",
    "NAV ACTIVE FREQUENCY:1",
    "NAV ACTIVE FREQUENCY:2",
    "NAV STANDBY FREQUENCY:1",
    "NAV STANDBY FREQUENCY:2",
    "PITOT HEAT",
    "PLANE ALT ABOVE GROUND",
    "PLANE ALTITUDE",
    "PLANE BANK DEGREES",
    "PLANE HEADING DEGREES MAGNETIC",
    "PLANE HEADING DEGREES TRUE",
    "PLANE LATITUDE",
    "PLANE LONGITUDE",
    "PLANE PITCH DEGREES",
    "PROP RPM:1",
    "PROP RPM:2",
    "RUDDER POSITION",
    "RUDDER TRIM PCT",
    "SIM ON GROUND",
    "SPOILERS HANDLE POSITION",
    "STRUCTURAL DEICE SWITCH",
    "SURFACE TYPE",
    "TOTAL WEIGHT",
    "TRAILING EDGE FLAPS LEFT ANGLE",
    "TRAILING EDGE FLAPS RIGHT ANGLE",
    "TRANSPONDER CODE:1",
    "TURB ENG CORRECTED N1:1",
    "TURB ENG CORRECTED N1:2",
    "TURN INDICATOR RATE",
    "VARIOMETER RATE",
    "VERTICAL SPEED",
    "WISKEY COMPASS INDICATION DEGREES",
]
