crates/flight-simconnect/tests/snapshots/simconnect_snapshots__simvar_writable_vars.snap
---
source: crates/flight-simconnect/tests/simconnect_snapshots.rs
expression: names
---
[
    "AILERON POSITION",
    "AILERON TRIM PCT",
    "AUTOPILOT AIRSPEED HOLD VAR",
    "AUTOPILOT ALTITUDE LOCK VAR",
    "AUTOPILOT HEADING LOCK DIR",
    "AUTOPILOT MACH HOLD VAR",
    "AUTOPILOT MASTER",
    "AUTOPILOT VERTICAL HOLD VAR",
    "BRAKE LEFT POSITION",
    "BRAKE PARKING POSITION",
    "BRAKE RIGHT POSITION",
    "COM ACTIVE FREQUENCY:1",
    "COM ACTIVE FREQUENCY:2",
    "COM STANDBY FREQUENCY:1",
    "COM STANDBY FREQUENCY:2",
    "ELECTRICAL MASTER BATTERY",
    "ELEVATOR POSITION",
    "ELEVATOR TRIM POSITION",
    "ENG FUEL VALVE OPEN:1",
    "FLAPS HANDLE INDEX",
    "FLAPS HANDLE PERCENT",
    "GEAR HANDLE POSITION",
    "GENERAL ENG ANTI ICE POSITION:1",
    "GENERAL ENG GENERATOR SWITCH:1",
    "GENERAL ENG MIXTURE LEVER POSITION:1",
    "GENERAL ENG MIXTURE LEVER POSITION:2",
    "GENERAL ENG THROTTLE LEVER POSITION:1",
    "GENERAL ENG THROTTLE LEVER POSITION:2",
    "KOHLSMAN SETTING MB",
    "NAV ACTIVE FREQUENCY:1",
    "NAV ACTIVE FREQUENCY:2",
    "NAV STANDBY FREQUENCY:1",
    "NAV STANDBY FREQUENCY:2",
    "PITOT HEAT",
    "RUDDER POSITION",
    "RUDDER TRIM PCT",
    "SPOILERS HANDLE POSITION",
    "STRUCTURAL DEICE SWITCH",
    "TRANSPONDER CODE:1",
]
